// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the shape of each screen > one holdings row 1`] = `"button"`;

exports[`the shape of each screen > the HUD 1`] = `
"header
div
div
span
span
div
button
span
svg
button
div
div
span
svg
button
span
div
span
svg
button
span
div
span
svg
button
span
span
i
div
span
svg
button
span
span
span
button
div
div
span
span
span
span
span
span
span
span
span
span
button
span
svg
span
button"
`;

exports[`the shape of each screen > the nav 1`] = `
"nav
button
span
svg
button
span
svg
button
span
svg
button
span
svg
button
span
svg
button
span
svg"
`;
